...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <Spinner
        android:id="@+id/spinner3E1"
        android:layout_width="280dp"
        android:layout_height="23dp"
        android:entries="@array/TypeOfPain"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
...
