...
        android:id="@+id/checkBox2a3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="Liver Disease"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintLeft_toLeftOf="@+id/checkBox10a3" />

    <CheckBox
        android:id="@+id/checkBox3a3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="Heart Disease"
...
